# yeTTY

./: CMakeLists.txt  longtermrunmodedialog.cpp  longtermrunmodedialog.h  longtermrunmodedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portselectiondialog.cpp  portselectiondialog.h  portselectiondialog.ui  triggersetupdialog.cpp  triggersetupdialog.h  triggersetupdialog.ui  yetty.version.h.in
resources/: dev.aa55.yeTTY.desktop  dev.aa55.yeTTY.svgz  resources.qrc
